--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     this page.
                   </p> <p><strong>Contact Us</strong></p> <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
                     me.
-                  </p> <p>Our email address : wisdomredapple@gmail.com</p>
+                  </p> <p>Our email address : luckyrockethorse@gmail.com</p>
     </body>
     </html>
       
